Fixed white spaces

--- a/src/components/ArticleIndexHeading/ArticleIndexHeading.scss
+++ b/src/components/ArticleIndexHeading/ArticleIndexHeading.scss
@@ -6,12 +6,4 @@ display: flex;
 justify-content: space-evenly;
 flex-direction: column;
 align-items: center;
-//height: ;
-&__title{
-
-
-}
-
-
-
 }
